[package]
name = "mbfilter"
version = "0.1.0"
authors = ["Alexande Becker <becker.alexander42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moessbauer_filter = { path = "../moessbauer_filter" }
moessbauer_data = { path = "../moessbauer_data" }
clap = "2.33.3"
