[package]
name = "mbfilter"
version = "0.1.0"
authors = ["Alexande Becker <becker.alexander42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moessbauer_filter = { path = "../moessbauer_filter" }
moessbauer_data = { path = "../moessbauer_data" }
clap = "2.33.3"
log = "0.4.11"
env_logger = "0.7.1"
warp = { version = "0.2.5", default_features = false, features = ["websocket"] }
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"]}
anyhow = "1.0.32"
serde = { version = "1.0.116", features = ["derive"]}
futures-util = "0.3.5"
futures = "0.3.7"
